--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
                         </a>
                     </p>
                 </video>
+                
             </div>
 			<div class="overlay-block">
                 <div class="ov-wrap learn">
@@ -167,8 +168,8 @@
         </div>
     </div>
     <div class="start load">
-        <img src="images/startscreen-load-btn-h.png" alt=""/>
         <img src="images/startscreen-load-btn.png" alt=""/>
+        <img src="images/startscreen-load-btn-h.png" alt=""/>
     </div>
 </div>
 <!--<div class="s-ctrls">
@@ -191,12 +192,11 @@
 </div>
 <div class="special-btns"><div class="inner"></div></div>
 <div class="achievement-pop">
-    <div class="close"></div>
     <div class="into"></div>
 </div>
 <div class="info-pop">
     <div class="caller"></div>
-    <div class="inner" style="background-image: url(images/info-pop/bg.jpg);">
+    <div class="inner">
         <div class="tabs">
             <div><span>Сохранение</span></div>
             <div><span>Загрузка</span></div>
@@ -242,10 +242,6 @@
                                 <input type="text" class="code-hidden"/>
                                 <div class="btn copy">скопировать в буфер</div>
                             </div>
-                            <div class="the-code">
-                                <input data-valid="^[a-zA-Z0-9_.+-]+@[a-zA-Z0-9-]+\.[a-zA-Z0-9-.]+$" placeholder="Введите e-mail" type="text" class="mail-input"/>
-                                <a href="" class="btn mail">Отправить на почту</a>
-                            </div>
                             <div class="or-copy">
                                 Или вы можете схоранить себе qr-код и воспользоваться сканером на устройстве.
                             </div>
@@ -264,112 +260,37 @@
                         </div>
                         <div class="block">
                             <div class="pers-item">
-                                <img src="images/info-pop/Leshiy.jpg" alt="" class="pers-img"/>
-                                <div class="pers-text">
-                                    <div class="pers-h">Леший</div>
-                                    Координатор поисков отряда волонтеров «ЛизаАлерт» Николай. Самоотверженный и принципиальный, решительный и очень рациональный. Готов на все ради спасения людей.
-                                </div>
-                            </div>
-                            <div class="pers-item">
-                                <img src="images/info-pop/Sashka.jpg" alt="" class="pers-img"/>
-                                <div class="pers-text">
-                                    <div class="pers-h">Сашка</div>
-                                    Инфорг поисков и жена Лешего. Опытный поисковик, но в этот раз работает из дома по настоянию мужа. По-настоящему добрая и отзывчивая, с развитой интуицией. Часто бывает импульсивной и действует сердцем.
-                                </div>
-                            </div>
-                            <div class="pers-item">
-                                <img src="images/info-pop/Bob.jpg" alt="" class="pers-img"/>
-                                <div class="pers-text">
-                                    <div class="pers-h">Боб</div>
-                                    Пеший поисковик отряда «ЛизаАлерт», волонтер-весельчак. Умеет находить общий язык с людьми. Добродушный, всегда готов прийти на помощь.
-                                </div>
-                            </div>
-                            <div class="pers-item">
-                                <img src="images/info-pop/Kartoshka.jpg" alt="" class="pers-img"/>
-                                <div class="pers-text">
-                                    <div class="pers-h">Картошкин</div>
-                                    Картограф и опытный поисковик Маша. Скромная, красивая и умная девушка. Rак хороший психолог, умеет найти подход к людям.
-                                </div>
-                            </div>
-                            <div class="pers-item">
                                 <img src="images/info-pop/Lisa.jpg" alt="" class="pers-img"/>
                                 <div class="pers-text">
                                     <div class="pers-h">Лиса</div>
                                     Главная героиня, девочка-подросток Алиса. Она яркая, умная, целеустремленная, свободолюбивая. У Лисы на все есть свое мнение, поэтому ее не воспринимают сверстники и даже буллят. Единственный друг – Макс, именно с ним девочка решает бежать из города, чтобы почувствовать вкус свободы.
                                 </div>
                             </div>
-                            <div class="pers-item">
-                                <img src="images/info-pop/Max.jpg" alt="" class="pers-img"/>
-                                <div class="pers-text">
-                                    <div class="pers-h">Макс</div>
-                                    Лучший друг Лисы и начинающий художник. Живет вдвоем с матерью, которая его не понимает и вечно ругает. Побег – его идея, он мечтает попасть на арт-фестиваль в Москве.
-                                </div>
-                            </div>
-                            <div class="pers-item">
-                                <img src="images/info-pop/Artyom.jpg" alt="" class="pers-img"/>
-                                <div class="pers-text">
-                                    <div class="pers-h">Артём</div>
-                                    Брат Лисы с расстройством аутистического спектра. В силу диагноза немного болезненный, при этом очень умный и начитанный. Кажется, знает все обо всем. Асоциален (в основном из-за того, что говорит людям только правду, а это им не всегда нравится).
-                                </div>
-                            </div>
-                            <div class="pers-item">
-                                <img src="images/info-pop/Andrey.jpg" alt="" class="pers-img"/>
-                                <div class="pers-text">
-                                    <div class="pers-h">Андрей</div>
-                                    Отчим Лисы и Артёма. Местный авторитет и бизнесмен. Бывает резок, импульсивен. Требует к себе уважения и особого отношения в силу статуса. Считает, что деньги могут решить все проблемы. Что бы кто ни говорил, любит своих приемных детей и готов ради них на все.
-                                </div>
-                            </div>
-                            <div class="pers-item">
-                                <img src="images/info-pop/Irina.jpg" alt="" class="pers-img"/>
-                                <div class="pers-text">
-                                    <div class="pers-h">Ирина</div>
-                                    Мама Лисы и Артёма. Мягкая и ранимая женщина, часто оказывается между двух огней – Лисой и Андреем, которые в последнее время часто конфликтуют. Ее призвание – быть мамой, заботиться о детях и Андрее, а главное желание – это любовь, мир и взаимопонимание в семье.
-                                </div>
-                            </div>
-                            <div class="pers-item">
-                                <img src="images/info-pop/Valya.jpg" alt="" class="pers-img"/>
-                                <div class="pers-text">
-                                    <div class="pers-h">Валя</div>
-                                    Мама Макса. Работает кассиром в магазине, трудится за копейки. Воспитывает сына одна, из-за чего порой ей приходится быть жесткой. Может и накричать, и ударить, так как хочет, чтобы сын ей помогал и ценил все, что она делает для него, а не витал в облаках и мечтал об искусстве.
-                                </div>
-                            </div>
                         </div>
-                        <div class="block">
-                            <div class="art-item">
-                                <a class="art-ref" href="https://найден-жив.рф/les.html" target="_blank">Ты собираешься в лес</a>
-                                <div class="art-text">Поход в лес может закончиться печально, если не быть готовым к неожиданностям.</div>
+                        <div class="block articles">
+                            <div class="article-item">
+                                <img src="images/startscreen-btn.png" alt="" class="a-bg"/>
+                                <div class="a-cont">
+                                    <div class="a-h"><span>Ты собираешься в лес</span></div>
+                                    <div class="a-text">Поход в лес может закончиться печально, если не быть готовым к неожиданностям.</div>
+                                </div>
+                                <img src="images/info-pop/Lisa.jpg" alt="" class="a-icon"/>
                             </div>
-                            <div class="art-item">
-                                <a class="art-ref" href="https://найден-жив.рф/zabludilsya.html" target="_blank">Ты заблудился в лесу</a>
-                                <div class="art-text">Вместо того чтобы паниковать есть порядок действий, который может помочь тебе справиться с этой ситуацией.</div>
+                            <div class="article-item">
+                                <img src="images/startscreen-btn.png" alt="" class="a-bg"/>
+                                <div class="a-cont">
+                                    <div class="a-h"><span>Ты собираешься в лес</span></div>
+                                    <div class="a-text">Поход в лес может закончиться печально, если не быть готовым к неожиданностям.</div>
+                                </div>
+                                <img src="images/info-pop/Lisa.jpg" alt="" class="a-icon"/>
                             </div>
-                            <div class="art-item">
-                                <a class="art-ref" href="https://найден-жив.рф/vodoem.html" target="_blank">Ты отдыхаешь у водоёма</a>
-                                <div class="art-text">Водоемы опасней, чем кажутся. Будь готов, предупреждай беду. Помогай другим.</div>
-                            </div>
-                            <div class="art-item">
-                                <a class="art-ref" href="https://найден-жив.рф/odin.html" target="_blank">Ты один в городе</a>
-                                <div class="art-text">Город не просто так называют бетонными джунглями. Готовность действовать важна.</div>
-                            </div>
-                            <div class="art-item">
-                                <a class="art-ref" href="https://найден-жив.рф/poezdka.html" target="_blank">Ты потерялся во время поездки</a>
-                                <div class="art-text">Полезная информация, которую стоит знать детям во время поездок.</div>
-                            </div>
-                            <div class="art-item">
-                                <a class="art-ref" href="https://найден-жив.рф/blizkiy.html" target="_blank">Потерялся близкий</a>
-                                <div class="art-text">Что делать, если ваш близкий человек потерялся. Порядок действий, номер телефонов, алгоритм действий.</div>
-                            </div>
-                            <div class="art-item">
-                                <a class="art-ref" href="https://найден-жив.рф/mif.html" target="_blank">Миф про 3 дня</a>
-                                <div class="art-text">Помните, в детективных фильмах и сериалах, если пропал человек, то лишь спустя три дня нужно было обращаться в полицию, не раньше?</div>
-                            </div>
-                            <div class="art-item">
-                                <a class="art-ref" href="https://найден-жив.рф/pozhilye.html" target="_blank">У вас есть пожилые родственники или вы встретили дезориентированного человека</a>
-                                <div class="art-text">У многих из нас есть бабушки и дедушки, которых мы любим и ценим. К сожалению, с возрастом у них ухудшается память.</div>
-                            </div>
-                            <div class="art-item">
-                                <a class="art-ref" href="https://найден-жив.рф/deti.html" target="_blank">У вас есть дети</a>
-                                <div class="art-text">Мы часто слышим о случаях пропажи детей. К сожалению, исчезновение ребёнка не всегда является несчастным случаем, а может быть хладнокровным преступлением.</div>
+                            <div class="article-item">
+                                <img src="images/startscreen-btn.png" alt="" class="a-bg"/>
+                                <div class="a-cont">
+                                    <div class="a-h"><span>Ты собираешься в лес</span></div>
+                                    <div class="a-text">Поход в лес может закончиться печально, если не быть готовым к неожиданностям.</div>
+                                </div>
+                                <img src="images/info-pop/Lisa.jpg" alt="" class="a-icon"/>
                             </div>
                         </div>
                     </div>
