--- a/index.html
+++ b/index.html
@@ -305,12 +305,12 @@
 <script type="text/template" id="info-art-template">
     <% for(let i=0;i<articles.length;i++){ %>
     <div class="article-item">
-        <img src="<%= bg %>" alt="" class="a-bg"/>
+        <img src="<%= articles[i].bg %>" alt="" class="a-bg"/>
         <div class="a-cont">
-            <div class="a-h"><span><%= h %></span></div>
-            <div class="a-text"><%= text %></div>
+            <div class="a-h"><span><%= articles[i].h %></span></div>
+            <div class="a-text"><%= articles[i].text %></div>
         </div>
-        <img src="<%= icon %>" alt="" class="a-icon"/>
+        <img src="<%= articles[i].icon %>" alt="" class="a-icon"/>
     </div>
     <% } %>
 </script>
