full article pop

--- a/index.html
+++ b/index.html
@@ -194,6 +194,25 @@
 <div class="achievement-pop">
     <div class="into"></div>
 </div>
+<div class="article-pop">
+    <div class="into"></div>
+</div>
+<div class="full-article-pop">
+    <div class="bg"></div>
+    <div class="content">
+        <div class="close"></div>
+        <div class="back"></div>
+        <div class="more"></div>
+        <div class="container">
+            <div class="t-scroll-wrap">
+                <div class="t-scroll-inner">
+                
+                </div>
+            </div>
+            <div class="t-scroll-bar"><div></div></div>
+        </div>
+    </div>
+</div>
 <div class="info-pop">
     <div class="caller"></div>
     <div class="inner">
@@ -323,6 +342,10 @@
         </div>
         <img src="<%= icon %>" alt="" class="a-icon"/>
     </div>
+</script>
+<script type="text/template" id="full-article-template">
+    <div class="h"><span><%= h %></span></div>
+    <div class="text"><%= text %></div>
 </script>
 <script type="text/template" id="ext-player-template">
     <input type="checkbox" />
