--- a/index.html
+++ b/index.html
@@ -301,25 +301,39 @@
         <div class="block">
             <div class="choose">
                 <div>Денис</div>
-                <img src="images/startscreen-btn.png" alt=""/>
             </div>
             <div class="choose">
                 <div>Ольга</div>
-                <img src="images/game/girl.jpg" alt=""/>
             </div>
-            <div class="ch-text">Выбери персонажа</div>
+            <div class="ch-text"><span>Выбери персонажа</span></div>
             <div class="ch-text">
-                Text text text text text text text text text text text text text text text text text text text
+                Не дай мусору оказаться упасть на землю. Лови всё, что можно переработать.<br/>
+                Каждый пропущенный мусор забирает у тебя "жизнь". Отсорожнее, всего их 3.<br/>
                 <br/><br/>
-                Text text text text text text text text <b>AKZM</b>
+                В игре нажимай кнопки игрового устройства на твоем экране,<br/>
+                или если ты играешь с компьютера, то можешь воспользоваться кнопками AZKM на клавиатуре
             </div>
         </div>
         <div class="block">
-            <div class="g-bg">
-                <img src="images/startscreen-btn.png" alt=""/>
-                <img src="images/game/girl.jpg" alt=""/>
+            <img class="g-bg" src="images/game/base.jpg" alt=""/>
+            <img class="g-bg" src="images/game/man.png" alt=""/>
+            <div class="g-close"></div>
+            <img class="g-btn" src="images/game/btn-off.png" alt=""/>
+            <div class="g-ctrl lu"></div>
+            <img class="g-btn" src="images/game/btn-lu.png" alt=""/>
+            <img class="g-hand" src="images/game/hand-lu.svg" alt=""/>
+            <div class="g-ctrl ru"></div>
+            <img class="g-btn" src="images/game/btn-ru.png" alt=""/>
+            <img class="g-hand" src="images/game/hand-ru.svg" alt=""/>
+            <div class="g-ctrl rd"></div>
+            <img class="g-btn" src="images/game/btn-rd.png" alt=""/>
+            <img class="g-hand" src="images/game/hand-rd.svg" alt=""/>
+            <div class="g-ctrl ld"></div>
+            <img class="g-btn" src="images/game/btn-ld.png" alt=""/>
+            <img class="g-hand" src="images/game/hand-ld.svg" alt=""/>
+            <div class="game">
+    
             </div>
-            <div class="tmp"></div>
         </div>
         <div class="block">
             <div class="score">
