--- a/index.html
+++ b/index.html
@@ -53,7 +53,6 @@
                         </a>
                     </p>
                 </video>
-                
             </div>
 			<div class="overlay-block">
                 <div class="ov-wrap learn">
@@ -262,8 +261,10 @@
                         </div>
                         <div class="block articles">
                             <div class="extra">
-                                ПРОДОЛЖАЙТЕ ПРОСМОТР<br/><br/>
-                                Вместе с Ольгой и Денисом продолжай узнавать больше
+                                <div class="e-cont">
+                                    <div class="e-h">ПРОДОЛЖАЙТЕ ПРОСМОТР</div>
+                                    Вместе с Ольгой и Денисом продолжай узнавать больше
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -299,18 +300,24 @@
             <div class="choose">
                 <div>Ольга</div>
             </div>
+            <img src="images/game/g-select-l.svg" alt="" class="ch-hover"/>
+            <img src="images/game/g-select-r.svg" alt="" class="ch-hover"/>
             <div class="ch-text"><span>Выбери персонажа</span></div>
             <div class="ch-text">
-                Не дай мусору оказаться упасть на землю. Лови всё, что можно переработать.<br/>
-                Каждый пропущенный мусор забирает у тебя "жизнь". Отсорожнее, всего их 3.<br/>
-                <br/><br/>
-                В игре нажимай кнопки игрового устройства на твоем экране,<br/>
-                или если ты играешь с компьютера, то можешь воспользоваться кнопками AZKM на клавиатуре
+                <div class="ch-t-item">
+                    Лови всё, что можно переработать.<br/>
+                    Попускаешь мусор — теряешь жизни, их всего 3.
+                </div>
+                <div class="ch-t-item">
+                    Используй кнопки приставки<br/>
+                    или AZKM на клавиатуре.
+                </div>
             </div>
         </div>
         <div class="block">
             <img class="g-bg" src="images/game/base.jpg" alt=""/>
             <img class="g-bg" src="images/game/man.png" alt=""/>
+            <img class="g-bg" src="images/game/secret.png" alt=""/>
             <div class="g-close"></div>
             <img class="g-btn" src="images/game/btn-off.png" alt=""/>
             <div class="g-ctrl lu"></div>
